<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:id="@+id/pdfLayout"
    tools:context=".PdfTemplatePreview">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="null"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="end"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="null"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="end"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enrolment"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvEnrollNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="null"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="end"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="null"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="end"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/createPdfBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create PDF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="8dp"
        />


</LinearLayout>